2007-09-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: allow to specify rendering intent and 
	black point compensation. Fixes bug #474787.

2007-09-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/burn-in-anim.scm
	* plug-ins/script-fu/scripts/coffee.scm: removed newlines from
	translatable strings. Fixes bug #475553.

2007-09-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lens.c: applied patch from Aurimas Juška which
	simplifies the code by using GimpPixelFetcher and fixes handling
	of selections in the preview. Fixes the last aspect of bug #356716.

2007-09-10  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.[ch]
	* app/core/gimpchannel.c
	* app/core/gimpdrawable-transform.[ch]
	* app/core/gimpdrawable.c
	* app/core/gimpimage-item-list.[ch]
	* app/core/gimpitem-linked.[ch]
	* app/core/gimpitem.[ch]
	* app/core/gimplayer.c
	* app/paint/gimpperspectiveclone.c
	* app/vectors/gimpvectors.c: removed supersample parameter from
	transform functions and perform it depending on the interpolation
	type (bug #473265).

	* app/tools/gimptransformoptions.[ch]
	* app/tools/gimptransformtool.c: removed Supersample toggle from
	the transform tool options.

	* tools/pdbgen/pdb/drawable_transform.pdb
	* tools/pdbgen/pdb/transform_tools.pdb: document that the
	supersample parameter is unused and improved documentation of the
	recursion-level parameter.

	* app/pdb/transform_tools_cmds.c
	* app/pdb/drawable_transform_cmds.c
	* libgimp/gimpdrawabletransform_pdb.c: regenerated.

2007-09-10  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c
	(gimp_perspective_clone_tool_motion): removed unused variable.

2007-09-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psp.c: applied patch from Nils Philippsen that
	fixes an endianess problem (bug #475464).

2007-09-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c (lcms_drawable_transform): copy the alpha